@@ -3,7 +3,9 @@
 	* device/lib/gbz80/abs.s,
 	  device/lib/gbz80/atomic_flag_test_and_set.s,
 	  device/lib/gbz80/div.s,
-	  device/lib/gbz80/mul.s:
+	  device/lib/gbz80/mul.s,
+	  device/lib/gbz80/memcpy.s,
+	  device/lib/gbz80/setjmp.s:
 	  Fix library functions for new calling convention.
 
 2021-07-31 Philipp Klaus Krause <pkk AT spth.de>
